--- a/jekyll/pages/index.html
+++ b/jekyll/pages/index.html
@@ -1,7 +1,19 @@
 ---
 permalink: /
+title: home
 ---
 
-<section>
-  page content index
+<section class="hero is-fullheight-with-navbar is-light">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <div class="tile is-ancestor">
+        <div class="tile is-parent">
+          <div class="tile is-child">
+            <h1 class="title is-1">apticity</h1>
+            <h2 class="subtitle is-3">startup</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
